--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,9 +1,9 @@
 [user]
-    name = Lars Kappert
-    email = lars@webpro.nl
+    name = Alan Mitchell
+    email = galan.mitchell@gmail.com
 
 [github]
-    user = webpro
+    user = C4SUAL
 
 [core]
     excludesfile = ~/.gitignore_global
@@ -84,7 +84,7 @@
     cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 
 [merge]
     tool = Kaleidoscope
@@ -96,4 +96,3 @@
 [mergetool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
-
